# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-streaming-java module.

This module provides the Java API for stream processing in Flink.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-streaming-java",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-streaming-java/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-connectors/flink-file-sink-common",
        "//flink-core",
        "//flink-core-api",
        "//flink-metrics/flink-metrics-core",
        "//flink-runtime",
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_apache_commons_commons_math3",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    # Exclude migration tests that use hardcoded filesystem paths incompatible with Bazel sandbox
    # TODO: Update these tests to use classpath resources or Bazel runfiles instead of Paths.get("src/test/resources/")
    srcs = glob(
        ["src/test/java/**/*Test.java"],
        exclude = [
            "src/test/java/**/BucketStateSerializerTest.java",
            "src/test/java/**/WindowOperatorMigrationTest.java",
        ],
    ),
    data = [":migration-test-data"],
    deps = [
        ":flink-streaming-java",
        "//flink-runtime:flink-runtime-test-jar",  # Test utilities
        "//flink-core:flink-core-test-jar",  # MockSource and other test utilities
        "//flink-test-utils-parent/flink-migration-test-utils",  # MigrationTest interface
        "//flink-connectors/flink-connector-datagen",  # For DataGeneratorSource tests
        "//flink-connectors/flink-file-sink-common",  # For RollingPolicy tests
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",  # For Iterables
        "@maven//:com_esotericsoftware_kryo",  # For Kryo serializer tests
        "@maven//:com_google_code_findbugs_jsr305",  # For @Nullable
        "@maven//:commons_io_commons_io",  # For IOUtils
    ],
    tests_lib_visibility = ["//visibility:public"],  # For AbstractStreamOperatorTestHarness
)

# Migration test data
# These test resources contain serialized state from previous Flink versions
# used for backward compatibility testing
filegroup(
    name = "migration-test-data",
    srcs = glob([
        "src/test/resources/bucket-state-migration-test/**/*",
        "src/test/resources/win-op-migration-test-*",
    ]),
)
