# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-architecture-tests-test module.

This module provides architecture tests for test code.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-architecture-tests-test",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-architecture-tests/flink-architecture-tests-test/src/main/resources",
    deps = [
        "//flink-architecture-tests/flink-architecture-tests-base",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_tngtech_archunit_archunit",
        "@maven//:com_tngtech_archunit_archunit_junit5",
        "@maven//:com_tngtech_archunit_archunit_junit5_api",
        "@maven//:junit_junit",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_api",
    ],
    exports = [
        "@maven//:com_tngtech_archunit_archunit",
        "@maven//:com_tngtech_archunit_archunit_junit5",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    deps = [":flink-architecture-tests-test"],
)
