# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-connector-base module.

This module provides base classes and utilities for Flink connectors.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-connector-base",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-connectors/flink-connector-base/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-core",
        "//flink-core-api",
        "//flink-metrics/flink-metrics-core",
        "//flink-runtime",
        "//flink-table/flink-table-common",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    deps = [
        ":flink-connector-base",
        # Direct dependencies (to fix strict dependency warnings)
        "//flink-core",
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        # Test utilities
        "//flink-core:flink-core-test-jar",  # For MockSourceSplit
        "//flink-runtime:flink-runtime-test-jar",  # For TestProcessingTimeService
        "//flink-test-utils-parent/flink-connector-test-utils",  # For TestingReaderContext
        "//flink-architecture-tests/flink-architecture-tests-base",  # For ImportOptions
        "//flink-architecture-tests/flink-architecture-tests-test",  # For ArchUnit test classes
        # ArchUnit dependencies (needed directly for compilation, not just via exports)
        "@maven//:com_tngtech_archunit_archunit",
        "@maven//:com_tngtech_archunit_archunit_junit5",
        "@maven//:com_tngtech_archunit_archunit_junit5_api",  # For @ArchTest annotation
    ],
    tests_lib_visibility = ["//visibility:public"],  # Make tests-lib visible for other modules (e.g., TestSinkInitContext)
)
