# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-connector-datagen module.

This module provides data generation sources for Flink.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library_with_test_jar")

# Main library target with test utilities
flink_java_library_with_test_jar(
    name = "flink-connector-datagen",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-connectors/flink-connector-datagen/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-core",
        "//flink-core-api",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
    # Export test utilities for use by other modules
    test_jar_srcs = glob(["src/test/java/**/*.java"]),
    test_jar_deps = [],
)
