# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-connector-files module.

This module provides file-based connector support.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-connector-files",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-connectors/flink-connector-files/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-connectors/flink-connector-base",
        "//flink-connectors/flink-file-sink-common",
        "//flink-core",
        "//flink-core-api",
        "//flink-metrics/flink-metrics-core",
        "//flink-runtime",
        "//flink-streaming-java",
        "//flink-table/flink-table-api-java",
        "//flink-table/flink-table-api-java-bridge",
        "//flink-table/flink-table-common",
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    # Exclude migration test that uses hardcoded filesystem paths incompatible with Bazel sandbox
    # TODO: Update FileWriterBucketStateSerializerMigrationTest to use classpath resources or Bazel runfiles
    srcs = glob(
        ["src/test/java/**/*Test.java"],
        exclude = [
            "src/test/java/**/FileWriterBucketStateSerializerMigrationTest.java",
        ],
    ),
    deps = [
        ":flink-connector-files",
        # Direct dependencies
        "//flink-connectors/flink-file-sink-common",
        "//flink-core",
        "//flink-streaming-java",
        "@flink_shaded//:org_apache_flink_flink_shaded_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:commons_io_commons_io",
        # Test utilities
        "//flink-architecture-tests/flink-architecture-tests-base",  # For ImportOptions
        "//flink-architecture-tests/flink-architecture-tests-test",
        "//flink-connectors/flink-connector-base:tests-lib",  # For TestSinkInitContext
        "//flink-runtime:flink-runtime-test-jar",  # For runtime.testutils classes
        "//flink-table/flink-table-common:flink-table-common-test-jar",  # For LegacyRowResource
        "//flink-test-utils-parent/flink-connector-test-utils",  # For SinkV2Assertions and mocks
        # ArchUnit dependencies (needed directly for compilation, not just via exports)
        "@maven//:com_tngtech_archunit_archunit",
        "@maven//:com_tngtech_archunit_archunit_junit5",
        "@maven//:com_tngtech_archunit_archunit_junit5_api",  # For @ArchTest annotation
    ],
)
