# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-file-sink-common module.

This module provides common utilities for file sink implementations including:
- Bucket assignment
- File writer abstractions
- Rolling policies
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-file-sink-common",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//flink-annotations",
        "//flink-core",
        "//flink-core-api",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Tests
flink_java_tests(
    name = "tests",
    # Exclude migration test that uses hardcoded filesystem paths incompatible with Bazel
    # TODO: Update OutputStreamBasedPartFileRecoverableMigrationTest to use classpath resources or Bazel runfiles
    srcs = glob(
        ["src/test/java/**/*Test.java"],
        exclude = [
            "src/test/java/**/OutputStreamBasedPartFileRecoverableMigrationTest.java",
        ],
    ),
    deps = [
        ":flink-file-sink-common",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
    # Add migration test data files so they're available at runtime
    # Note: Use a filegroup to avoid duplicate label issues with glob
    data = [":test-migration-data"],
)

# Migration test data files
filegroup(
    name = "test-migration-data",
    srcs = glob(["src/test/resources/recoverable-serializer-migration/**/*"]),
)
