# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-end-to-end-tests-common module.

This module provides common utilities and infrastructure for Flink end-to-end tests.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

flink_java_library(
    name = "flink-end-to-end-tests-common",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-end-to-end-tests/flink-end-to-end-tests-common/src/main/resources",
    testonly = True,
    deps = [
        # Core Flink dependencies
        "//flink-core",
        "//flink-core-api",
        "//flink-runtime",

        # Test utilities
        "//flink-test-utils-parent/flink-connector-test-utils",
        "//flink-test-utils-parent/flink-test-utils",
        "//flink-test-utils-parent/flink-test-utils-junit",

        # Table API dependencies
        "//flink-table/flink-table-api-java",
        "//flink-table/flink-table-common",
        "//flink-table/flink-sql-gateway",  # FetchResultsResponseBody for SQL Gateway tests

        # Shaded dependencies
        "@flink_shaded//:org_apache_flink_flink_shaded_jackson",

        # HTTP client
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:com_squareup_okhttp3_logging_interceptor",

        # Testing frameworks (compile scope for E2E test utilities)
        "@maven//:junit_junit",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",

        # Testcontainers
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:org_testcontainers_junit_jupiter",

        # Annotations
        "@maven//:com_google_code_findbugs_jsr305",

        # Commons
        "@maven//:commons_io_commons_io",

        # Logging
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

flink_java_tests(
    name = "tests",
    deps = [":flink-end-to-end-tests-common"],
)
