# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-end-to-end-tests-table-api.

E2E test module for Table API functionality.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

flink_java_library(
    name = "flink-end-to-end-tests-table-api",
    srcs = glob(["src/main/java/**/*.java"]),
    testonly = True,
    deps = [
        "//flink-streaming-java",
        # Table API dependencies (per pom.xml lines 43-60)
        "//flink-table/flink-table-api-java",  # For TableResult
        "//flink-table/flink-table-api-java-bridge",
        "//flink-table/flink-table-common",
        "//flink-table/flink-table-runtime",  # Per pom.xml lines 55-60
        # Logging (per pom.xml lines 79-82)
        "@maven//:org_slf4j_slf4j_api",  # For Logger/LoggerFactory
    ],
    visibility = ["//visibility:public"],
)

flink_java_tests(
    name = "tests",
    deps = [":flink-end-to-end-tests-table-api"],
    runtime_deps = [
        "//flink-table/flink-table-planner-loader",  # For ExecutorFactory discovery via SPI (per pom.xml)
        "//flink-table/flink-table-planner",  # Actual planner implementation loaded by planner-loader
        # TODO: These tests currently fail with "Flink Table planner could not be found"
        # The planner-loader uses a complex classloader isolation mechanism that expects
        # Maven's shade plugin output. These tests pass in Maven but need special handling in Bazel.
    ],
)
